data/all_generated_tests/raw_wast_tests/br_if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2007.wast
;; 8. **Test Description**:    - **Scenario**: A function imported from another module executes a `br_if` to exit a loop, containing nested `block` structures.    - **Constraint**: Test if the `br_if` correctly transitions through multiple nesting levels, reflecting the accurate stack height at each jump.    - **Differential Focus**: Assess if `wizard_engine` accurately follows the implicit label handling done by WASM.

(assert_invalid
  (module
    (import "env" "externalFunc" (func $externalFunc))
    (func $test
      (loop $outer
        (block $inner
          (call $externalFunc)
          (br_if $outer (i32.const 1))
        )
      )
    )
  )
  "type mismatch"
)